sushant/Task/httpd-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
 # namespace: dev-httpd
spec:
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      nodeSelector:
        node: httpd
      containers:
      - name: httpd
        image: httpd:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: index-html
          mountPath: /usr/local/apache2/htdocs/index.html
          subPath: index.html
      volumes:
      - name: index-html
        configMap:
          name: httpd-index


---

apiVersion: v1
kind: Service
metadata:
  name: httpd
  #namespace: dev-httpd
spec:
  selector:
    app: httpd
  ports:
  - port: 80
    targetPort: 80
