sushant/Task/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  #namespace: dev-nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        node: nginx
      containers:
      - name: nginx
        image: sonbarse17/nginx
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
 # namespace: dev-nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
