sushant/Task/tomcat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
 # namespace: dev-tomcat
spec:
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      nodeSelector:
        node: tomcat
      containers:
      - name: tomcat
        image: sonbarse17/tomcat
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: tomcat
 # namespace: dev-tomcat
spec:
  selector:
    app: tomcat
  ports:
  - port: 8080
    targetPort: 8080
