sushant/Task/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /nginx
        backend:
          service:
            name: nginx
            port:
              number: 80
      - pathType: Prefix
        path: /httpd
        backend:
          service:
            name: httpd
            port:
              number: 80
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tomcat
            port:
              number: 8080
